# linker_unidexgrasp

./: README.md
dexgrasp_generation_forlinker/: README_linker.md  stl2obj.py  urdf2xml.py
dexgrasp_generation_forlinker/configs/: eval_config.yaml  eval_config_outside.yaml  glow_config.yaml  glow_joint_config.yaml
dexgrasp_generation_forlinker/configs/dataset/: cm_net_data.yaml  eval_data.yaml  eval_data_outside.yaml  (+2 more)
dexgrasp_generation_forlinker/datasets/: dex_dataset.py  l20_hand_builder.py  object_dataset.py  shadow_hand_builder.py
dexgrasp_generation_forlinker/eval/: config.yaml  log.txt  result.pt
dexgrasp_generation_forlinker/network/: eval.py  train.py  trainer.py
dexgrasp_generation_forlinker/scripts/: generate_object_pc.py  generate_object_pose.py  generate_object_table_pc.py
dexgrasp_generation_forlinker/tests/: data_for_RL.py  visualize_result.py  visualize_result_l20.py  visualize_result_l20_shadow.py
dexgrasp_generation_forlinker/utils/: eval_utils.py
dexgrasp_policy_l20hand/: README.md  setup.py
dexgrasp_policy_l20hand/assets_tiny_l20/: load_npy.py
dexgrasp_policy_l20hand/assets_tiny_l20/urdf/l20_652/: CMakeLists.txt  package.xml
dexgrasp_policy_l20hand/assets_tiny_l20/urdf/l20_652/config/: joint_names_l20_652.yaml
dexgrasp_policy_l20hand/assets_tiny_l20/urdf/l20_652/launch/: display.launch
dexgrasp_policy_l20hand/assets_tiny_l20/urdf/l20_652/urdf/: l20_652.csv  l20_652.urdf  l20_652_noROS.urdf
dexgrasp_policy_l20hand/dexgrasp/: train.py
dexgrasp_policy_l20hand/dexgrasp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1470 files in other folders)
